--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .history
 .svn/
 migrate_working_dir/
-lib/constants/
+
 
 # IntelliJ related
 *.iml
@@ -32,6 +32,7 @@ lib/constants/
 .pub-cache/
 .pub/
 /build/
+/lib/constants/server_config.dart
 
 # Symbolication related
 app.*.symbols
